# quant_trading_service

./: .app.py.swp  .gitignore  B2C_INVESTMENT_README.md  DEPLOYMENT.md  DOCKER_README.md  Dockerfile  Dockerfile.b2c  Dockerfile.dev  LATENCY_MONITOR_README.md  ML_PIPELINE_README.md  ML_SYSTEM_README.md  PULL_REQUEST_v2.0.0.md  PULL_REQUEST_v2.1.md  PULL_REQUEST_v2.2.0.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.1.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.3.0.md  TEST_SUITE_DOCUMENTATION.md  UI_TESTING_SUMMARY.md  app.py  build_and_test_containers.sh  dataingestion.py  docker-compose.b2c.simple.yml  docker-compose.b2c.yml  docker-compose.dev.yml  docker-compose.latency.yml  docker-compose.v2.3.yml  docker-compose.yml  docker-compose.yml.old  fees.py  fetch_zomato_data.py  final_container_test.py  fix-docker.sh  latency_data.json  manual_test.py  pytest.ini  quick-start-docker.sh  requirements-test.txt  (+38 more)
.github/: pull_request_template.md
.streamlit/: secrets.toml
core/: __init__.py  database.py  intervals.py  version.py
data/: __init__.py  fetch_zomato_data.py  ingestion.py
database/: init_user_tables.py  schema.sql
design/: database_schema.md  high_level_design.md  low_level_design.md  v2.3_architecture_design.md
kafka_docker_compose/: docker-compose.yml
ml_models/: demo_model.pkl  production_model_20250815_1001_20250815_100200.txt  (+12 more)
rust_components/kafka_consumer/: Cargo.toml  Dockerfile
rust_components/kafka_consumer/src/: main.rs
rust_components/websocket_server/: Cargo.toml  Dockerfile
rust_components/websocket_server/src/: main.rs
(+125 files in other folders)
