[package]
name = "websocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
url = "2.0"
uuid = { version = "1.0", features = ["v4"] }
rdkafka = { version = "0.35", features = ["cmake-build"] } 